sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:48: error: ')' expected but ',' found.
  for (i<- 0 to nbBases - 1, j<- 0 to nbPos - 1 ){
                           ^NaiveBaseball:53: error: illegal start of simple expression
}
^